--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
                 
                 <!-- Plane Game Card -->
-                <a href="https://twistedminda.github.io/plane" class="group block">
+                <a href="https://twistedminda.github.io/generator/plane" class="group block">
                     <div class="game-card rounded-2xl p-8 h-full relative overflow-hidden">
                         <!-- Card Background Effect -->
                         <div class="absolute inset-0 bg-gradient-to-br from-cyber-blue/10 via-transparent to-cyber-purple/10 opacity-0 group-hover:opacity-100 transition-opacity duration-500"></div>
