--- a/magician/index.html
+++ b/magician/index.html
@@ -106,6 +106,7 @@
     <script src="player.js"></script>
     <script src="faerie.js"></script>
     <script src="particle-effects.js"></script>
+    <script src="health-gems.js"></script>
     <script src="loop.js"></script>
     <script src="logic.js"></script>
 
