--- a/magician/index.html
+++ b/magician/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
     <title>Magician - Spell Caster</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -107,6 +107,7 @@
     <script src="faerie.js"></script>
     <script src="particle-effects.js"></script>
     <script src="health-gems.js"></script>
+    <script src="mobile.js"></script>
     <script src="loop.js"></script>
     <script src="logic.js"></script>
 
