--- a/magician/index.html
+++ b/magician/index.html
@@ -50,6 +50,10 @@
                 <span class="text-yellow-300 text-lg font-bold tracking-wide">Score: </span>
                 <span id="score" class="text-yellow-100 font-black text-lg tracking-wide">0</span>
             </div>
+            <!-- Version -->
+            <div class="text-right mt-0.5 pr-0.5">
+                <span class="text-white text-sm opacity-40 font-mono">v1.0.0</span>
+            </div>
         </div>
         
         <!-- Crosshair -->
