--- a/magician/index.html
+++ b/magician/index.html
@@ -51,8 +51,8 @@
                 <span id="score" class="text-yellow-100 font-black text-lg tracking-wide">0</span>
             </div>
             <!-- Version -->
-            <div class="text-right mt-0.5 pr-0.5">
-                <span class="text-white text-sm opacity-40 font-mono">v1.0.0</span>
+            <div class="text-right mt-0.5 pr-1">
+                <span id="version-label" class="text-white text-[8px] opacity-40 font-mono"></span>
             </div>
         </div>
         
@@ -73,7 +73,7 @@
         </div>
         
         <!-- Spell Cooldowns -->
-        <div class="absolute bottom-4 left-4 flex space-x-3">
+        <div id="desktop-spell-cooldowns" class="absolute bottom-4 left-4 flex space-x-3">
             <!-- Fireball Cooldown -->
             <div class="relative">
                 <div class="w-14 h-14 bg-black bg-opacity-40 rounded-full backdrop-blur-sm border-2 border-orange-400 border-opacity-50 flex items-center justify-center shadow-lg">
