--- a/magician/index.html
+++ b/magician/index.html
@@ -6,6 +6,7 @@
     <title>Magician - Spell Caster</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="constants.js"></script>
     <script>
         tailwind.config = {
             theme: {
