--- a/index.html
+++ b/index.html
@@ -204,6 +204,34 @@
                     </div>
                 </a>
                 
+                <!-- IMPRO Game Card -->
+                <a href="https://twistedminda.github.io/generator/impro" class="group block">
+                    <div class="game-card rounded-2xl p-8 h-full relative overflow-hidden">
+                        <div class="absolute inset-0 bg-gradient-to-br from-cyan-500/10 via-transparent to-pink-500/10 opacity-0 group-hover:opacity-100 transition-opacity duration-500"></div>
+                        <div class="relative z-10 mb-6 flex justify-center">
+                            <div class="w-20 h-20 bg-gradient-to-br from-cyan-500 to-pink-500 rounded-2xl flex items-center justify-center group-hover:scale-110 transition-transform duration-300">
+                                <svg class="w-10 h-10 text-white" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M12 2a10 10 0 100 20 10 10 0 000-20zm1 5l4 4-1.4 1.4L13 9.8V19h-2V9.8L8.4 12.4 7 11l4-4h2z"/>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="relative z-10 text-center">
+                            <h3 class="text-2xl font-bold text-white mb-3 group-hover:text-cyan-400 transition-colors duration-300">IMPRO</h3>
+                            <p class="text-gray-400 mb-4 leading-relaxed">Neon flow shooter. Pop homing orbs with precision pulses in a glowing arena.</p>
+                            <div class="flex flex-wrap justify-center gap-2 mb-6">
+                                <span class="px-3 py-1 bg-cyber-dark/50 text-cyan-300 text-xs rounded-full border border-cyan-300/30">Arena</span>
+                                <span class="px-3 py-1 bg-cyber-dark/50 text-pink-300 text-xs rounded-full border border-pink-300/30">Neon</span>
+                                <span class="px-3 py-1 bg-cyber-dark/50 text-white text-xs rounded-full border border-white/20">Reflex</span>
+                            </div>
+                            <div class="group-hover:scale-105 transition-transform duration-300">
+                                <span class="inline-flex items-center px-6 py-3 bg-gradient-to-r from-cyan-500 to-pink-500 text-white font-semibold rounded-xl">ENTER FLOW</span>
+                            </div>
+                        </div>
+                        <div class="absolute top-4 right-4 w-2 h-2 bg-cyan-400 rounded-full animate-pulse"></div>
+                        <div class="absolute bottom-4 left-4 w-1 h-1 bg-pink-400 rounded-full animate-pulse" style="animation-delay: 0.5s;"></div>
+                    </div>
+                </a>
+
                 <!-- Coming Soon Cards -->
                 <div class="game-card rounded-2xl p-8 h-full relative overflow-hidden opacity-60 cursor-not-allowed">
                     <div class="absolute inset-0 bg-gradient-to-br from-gray-500/5 via-transparent to-gray-500/5"></div>
