--- a/index.html
+++ b/index.html
@@ -232,6 +232,34 @@
                     </div>
                 </a>
 
+                <!-- GLADIATOR Game Card -->
+                <a href="https://twistedminda.github.io/generator/gladiator" class="group block">
+                    <div class="game-card rounded-2xl p-8 h-full relative overflow-hidden">
+                        <div class="absolute inset-0 bg-gradient-to-br from-amber-500/10 via-transparent to-emerald-400/10 opacity-0 group-hover:opacity-100 transition-opacity duration-500"></div>
+                        <div class="relative z-10 mb-6 flex justify-center">
+                            <div class="w-20 h-20 bg-gradient-to-br from-amber-400 to-emerald-400 rounded-2xl flex items-center justify-center group-hover:scale-110 transition-transform duration-300">
+                                <svg class="w-10 h-10 text-black" viewBox="0 0 24 24" fill="currentColor">
+                                    <path d="M12 2l2 4 4 .5-3 3 .7 4L12 12l-3.7 1.5.7-4-3-3 4-.5 2-4z"/>
+                                </svg>
+                            </div>
+                        </div>
+                        <div class="relative z-10 text-center">
+                            <h3 class="text-2xl font-bold text-white mb-3 group-hover:text-amber-300 transition-colors duration-300">GLADIATOR</h3>
+                            <p class="text-gray-400 mb-4 leading-relaxed">Chill round-based duel. Tap to strike, hold to guard. 2D reads in a glossy 3D arena.</p>
+                            <div class="flex flex-wrap justify-center gap-2 mb-6">
+                                <span class="px-3 py-1 bg-cyber-dark/50 text-amber-300 text-xs rounded-full border border-amber-300/30">Rounds</span>
+                                <span class="px-3 py-1 bg-cyber-dark/50 text-emerald-300 text-xs rounded-full border border-emerald-300/30">Parry</span>
+                                <span class="px-3 py-1 bg-cyber-dark/50 text-white text-xs rounded-full border border-white/20">No Movement</span>
+                            </div>
+                            <div class="group-hover:scale-105 transition-transform duration-300">
+                                <span class="inline-flex items-center px-6 py-3 bg-gradient-to-r from-amber-400 to-emerald-400 text-black font-semibold rounded-xl">ENTER ARENA</span>
+                            </div>
+                        </div>
+                        <div class="absolute top-4 right-4 w-2 h-2 bg-amber-300 rounded-full animate-pulse"></div>
+                        <div class="absolute bottom-4 left-4 w-1 h-1 bg-emerald-300 rounded-full animate-pulse" style="animation-delay: 0.5s;"></div>
+                    </div>
+                </a>
+
                 <!-- Coming Soon Cards -->
                 <div class="game-card rounded-2xl p-8 h-full relative overflow-hidden opacity-60 cursor-not-allowed">
                     <div class="absolute inset-0 bg-gradient-to-br from-gray-500/5 via-transparent to-gray-500/5"></div>
