--- a/melody/index.html
+++ b/melody/index.html
@@ -67,13 +67,14 @@
     </div>
 
     <!-- Three.js Canvas -->
-    <canvas id="game-canvas" class="block"></canvas>
+    <canvas id="gameCanvas" class="block"></canvas>
 
     <!-- Scripts -->
     <script src="constants.js"></script>
     <script src="state.js"></script>
     <script src="ui.js"></script>
     <script src="sounds.js"></script>
+    <script src="mobile.js"></script>
     <script src="particle-effects.js"></script>
     <script src="camera.js"></script>
     <script src="map.js"></script>
