--- a/trading-panel/index.html
+++ b/trading-panel/index.html
@@ -114,6 +114,7 @@
     <script src="candle.js"></script>
     <script src="chart.js"></script>
     <script src="price-scale.js"></script>
+    <script src="particles.js"></script>
                    <script src="sequences/simple.js"></script>
                <script src="sequences/medium.js"></script>
                <script src="sequences/complex.js"></script>
