--- a/trading-panel/index.html
+++ b/trading-panel/index.html
@@ -99,7 +99,7 @@
                 <!-- Live Info Box -->
                 <div id="live-info" class="absolute top-14 right-0 bg-gray-900/95 backdrop-blur-sm border border-green-500/30 rounded-xl p-3 shadow-2xl w-48 hidden">
                     <div class="text-green-400 text-sm font-bold mb-1">Live Feed</div>
-                    <div class="text-gray-300 text-xs">Bitcoin</div>
+                    <div class="text-gray-300 text-xs">Solana</div>
                 </div>
             </div>
         </div>
@@ -134,7 +134,9 @@
                <script src="sequences/complex.js"></script>
                <script src="sequences/realtime.js"></script>
     <script src="story.js"></script>
+    <script src="storage.js"></script>
     <script src="ui.js"></script>
+    <script src="api.js"></script>
     <script>
         // Initialize the 3D scene
         initScene();
