--- a/trading-panel/index.html
+++ b/trading-panel/index.html
@@ -133,6 +133,7 @@
                <script src="sequences/medium.js"></script>
                <script src="sequences/complex.js"></script>
                <script src="sequences/realtime.js"></script>
+    <script src="constants.js"></script>
     <script src="story.js"></script>
     <script src="storage.js"></script>
     <script src="ui.js"></script>
