--- a/trading-panel/index.html
+++ b/trading-panel/index.html
@@ -136,6 +136,7 @@
     <script src="constants.js"></script>
     <script src="story.js"></script>
     <script src="storage.js"></script>
+    <script src="live.js"></script>
     <script src="ui.js"></script>
     <script src="api.js"></script>
     <script>
