--- a/trading-panel/index.html
+++ b/trading-panel/index.html
@@ -129,6 +129,7 @@
                <script src="sequences/medium.js"></script>
                <script src="sequences/complex.js"></script>
                <script src="sequences/realtime.js"></script>
+               <script src="sequences/live-base.js"></script>
                <script src="sequences/sol.js"></script>
                <script src="sequences/btc.js"></script>
     <script src="constants.js"></script>
